<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DsWorkAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_ui">ui</string>
    <string name="title_component">组件</string>
    <string name="title_framework">框架</string>
    <string name="title_tab1">tab1</string>
    <string name="title_tab2">tab2</string>
    <string name="title_tab3">tab3</string>
    <string name="title_activity_html_tab">HtmlTabActivity</string>
    <string name="title_activity_group_tab">GroupTabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_slidingmenu">SlidingMenuActivity</string>
    <string name="title_activity_alphabet">AlphaBar例程</string>
    <string name="title_activity_loadmore">MoreListView例程</string>
    <string name="title_activity_oletab">OleTab例程</string>
    <string name="title_activity_fragment_demo">Fragment展开方式例程</string>
    <string name="title_activity_view_pager">ViewPager例程</string>
    <string name="title_activity_fragment_tab_host">FragmentTabHost例程</string>

    <string-array name="locations">
        <item>Home</item>
        <item>Email</item>
        <item>Calendar</item>
        <item>Browser</item>
        <item>Clock</item>
    </string-array>

    <string name="id">ID</string>
    <string name="confirm">删除</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm_del">确定删除吗？</string>
    <string name="confirm_upd">确定批量修改吗？</string>
    <string name="btn_save">保存</string>
    <string name="btn_search">搜索</string>
    <string name="title_activity_person">列表页（PersonActivity）</string>
    <string name="title_activity_person_detail">明细页（PersonDetailActivity）</string>
    <string name="title_activity_person_add">添加页（PersonEditActivity）</string>
    <string name="title_activity_person_edit">修改页（PersonEditActivity）</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="amount">存款</string>
    <string name="sortkey">拼音</string>
    <string name="menu_add">+添加</string>
    <string name="title_activity_demo_main">主页面（DemoMainActivity）</string>
    <string name="title_activity_demo_detail">明细页（DemoDetailActivity）</string>
    <string name="title_activity_demo_add">添加页（DemoAddActivity)</string>
    <string name="title_activity_demo_upd">修改页（DemoUpdActivity)</string>
    <string name="title_activity_demo_search">搜索页（DemoSearchActivity）</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="foundtime">创建时间</string>
    <string name="title_activity_person_search">PersonSearchActivity</string>

    <string-array name="my_item_menu">
        <item>修改2</item>
        <item>删除</item>
        <item>Home</item>
        <item>Email</item>
        <item>Calendar</item>
        <item>Browser</item>
        <item>Clock</item>
    </string-array>

    <!-- server url -->
    <string name="projUrl">http://192.168.1.107:8088/DemoJava</string>
    <string name="moduleUrl">/mobile/demo/</string>
    <!-- database sql -->
    <string-array name="createTableSql">
        <item>CREATE TABLE person(id INTEGER PRIMARY KEY AUTOINCREMENT,name VARCHAR(2),phone VARCHAR(12) NULL, amount VARCHAR(20) NULL, sortkey VARCHAR NULL)</item>
    </string-array>
    <string-array name="updateTableSql">
        <item></item>
    </string-array>

    <string name="title_activity_swipe_refresh">SwipeRefreshActivity</string>

</resources>
