<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
		<LinearLayout
		    android:orientation="horizontal"
		    android:background="@color/gray"
		    android:layout_width="fill_parent"
		    android:layout_height="30dp" >
			<TextView 
			    android:layout_width="120dp"
			    android:layout_height="wrap_content"
			    android:text="@string/id"
			    />
			<TextView 
			    android:layout_width="120dp"
			    android:layout_height="wrap_content"
			    android:text="@string/name"
			    />
			<TextView 
			    android:layout_width="120dp"
			    android:layout_height="wrap_content"
			    android:text="@string/sortkey"
			    />
			<TextView 
			    android:layout_width="150dp"
			    android:layout_height="wrap_content"
			    android:text="@string/phone"
			    />
			<TextView 
			    android:layout_width="150dp"
			    android:layout_height="wrap_content"
			    android:text="@string/amount"
			    />
		</LinearLayout>
	    <dswork.android.ui.MoreListView 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:id="@+id/mListView"
	        />
	</LinearLayout>
</LinearLayout>
