<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<LinearLayout
	    android:orientation="horizontal"
	    android:background="@color/gray"
	    android:layout_width="fill_parent"
	    android:layout_height="30dp" >
	    <CheckBox
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:gravity="center_vertical"
	        android:id="@+id/chkAll"/>
		<TextView 
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:text="@string/id"
		    />
		<TextView 
		    android:layout_width="150dp"
		    android:layout_height="wrap_content"
		    android:text="@string/title"
		    />
		<TextView 
		    android:layout_width="150dp"
		    android:layout_height="wrap_content"
		    android:text="@string/foundtime"
		    />
	</LinearLayout>
    <dswork.android.ui.MultiCheck.MultiCheckListView
        android:id="@+id/listView" 
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:fastScrollEnabled="true"/>
</LinearLayout>
