<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PersonAddActivity" >

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/name" />
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/name"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/phone" />
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/phone"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/amount" />
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/amount"/>
    </LinearLayout>
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_save"
        android:id="@+id/btn_save"/>

</LinearLayout>
