<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DemoUpdA" >
    
    
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
		android:id="@+id/id"/>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/title" />
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/title"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/content" />
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/content"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/foundtime" />
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/foundtime"/>
    </LinearLayout>
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_save"
        android:id="@+id/btn_save"
        android:onClick="save"/>

</LinearLayout>
