<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/id" />
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="：" />
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/id"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/name" />
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="：" />
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/name"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/sortkey" />
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="：" />
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/sortkey"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/phone" />
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="：" />
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/phone"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/amount" />
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="：" />
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/amount"/>
	    </LinearLayout>
	</LinearLayout>
</FrameLayout>
