<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".DemoDetailActivity" >

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/id" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="：" />
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/id"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/title" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="：" />
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/title"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/content" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="：" />
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/content"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/foundtime" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="：" />
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/foundtime"/>
    </LinearLayout>

</LinearLayout>
